# mri_ros_public

./: README.md
arpl_autonomy_stack/: CMakeLists.txt  README.md  package.xml
arpl_autonomy_stack/config/arpl_sim/default/: control_params.yaml  mav_manager_params.yaml
arpl_autonomy_stack/config/race/default/: control_params.yaml  trackers.yaml
arpl_autonomy_stack/config/snapdragon/default/: mav_manager_params.yaml  tracker_params.yaml  trackers.yaml
arpl_autonomy_stack/config/station/: rviz_config.rviz  rviz_config_hri.rviz  rviz_config_hri_haptic.rviz
arpl_autonomy_stack/config/voxl_v2/default/: mav_manager_params.yaml  so3_gains_px4.yaml  so3_gains_rpm.yaml  tracker_params.yaml  ukf_params.yaml
arpl_autonomy_stack/launch/race_platform/: race_state_control_with_openvins.launch  race_state_control_with_openvins_all_pipeline.launch  race_state_control_with_t265.launch  race_state_control_with_vicon.launch  station.launch  tf.launch
arpl_autonomy_stack/launch/race_platform/perception/: archive_openvins_d435i_nodelet.launch  d435i_nodelet.launch  t265_nodelet.launch
arpl_autonomy_stack/launch/simulator/: multiple_quadrotor_sim.launch  simulator_only.launch  single_quadrotor_sim.launch
arpl_autonomy_stack/launch/snapdragon_flight/: state_control.launch
arpl_autonomy_stack/launch/voxl_v2_platform/: voxl2_mavros_rpm_control.launch  voxl2_mavros_state_control.launch  voxl2_station.launch
drone_teleoperation/: CMakeLists.txt  package.xml
drone_teleoperation/config/: tele_control_params.yaml
drone_teleoperation/include/drone_teleoperation/: Mission_sim.h  Mission_voxl.h  admittance_hri_server.h  arpl_drone_sim.h  arpl_drone_voxl.h  replay_rosbag.h
drone_teleoperation/include/drone_teleoperation/core/: Admittance_Controller.h  KF.h  admittance_core.h
drone_teleoperation/include/drone_teleoperation/utils/: admittance_utils.h  log_files_writing.h  planner_utils.h  ros_visualization.h
drone_teleoperation/launch/: RRT_planner.launch  station.launch  tele_control_voxl_rviz_real.launch
drone_teleoperation/src/: Admittance_Controller.cpp~  admittance_hri_server.cpp  admittance_hri_server_node.cpp  admittance_teleop_sim.cpp  admittance_teleop_sim.cpp~  admittance_teleop_voxl.cpp  replay_rosbag.cpp  republish_rrt_topic_for_rviz_rosbag_replay.cpp  ros_data.py
drone_teleoperation/src/core/: Admittance_Controller.cpp  KF.cpp  admittance_core.cpp
drone_teleoperation/src/rrt/: heuristics.py  heuristics_with_voxels.py  keyboard_inputs_for_voxl.py  rrt.py  rrt_base.py  rrt_base_with_voxels.py  rrt_star.py  rrt_star_2D_with_voxles.py  test_plot.py
drone_teleoperation/src/rrt/Plots/: rrt_star_2d.html
drone_teleoperation/src/rrt/core/: rrt_star_voxels.py
drone_teleoperation/src/rrt/obsolete/: index_tutorial.py  place_a_goal.py  publish_goal_final.py  ros_data.py  ros_data_voxl.py  rrt_star_2D.py  rrt_star_with_voxels.py  test_voxels_as_obstacles.py
drone_teleoperation/src/rrt/utilities/: geometry.py  keyboard_input.py  obstacle_generation.py  plotting.py  plotting_v2.py  publishers.py  search_space.py
drone_teleoperation/src/utils/: admittance_utils.cpp  log_files_writing.cpp  planner_utils.cpp  ros_visualization.cpp
mr_hsi/mr_map_publisher/: CMakeLists.txt  package.xml
mr_hsi/mr_map_publisher/config/: map1.yaml  map2.yaml  map3.yaml
mr_hsi/mr_map_publisher/launch/: lm1.launch  lm2.launch  load_map.launch
mr_hsi/mr_map_publisher/scripts/: mr_map_publisher.py
scene_understanding_pkg/: CMakeLists.txt  package.xml
scene_understanding_pkg/config/: kimera_data_params.yaml  unity_communication_params.yaml
scene_understanding_pkg/include/: #ifndef _KIMERA_VIO_DATA_H.cpp  Feature_detection.h  Feature_detetction.h  Kimera_vio_data.h  Kimera_vio_data_.h  Kimera_vio_data_for_rosbag.h  Mesh_constructor.h  SU_Unity_comm.h  perception_server.h  perception_utils.h
scene_understanding_pkg/launch/: Kimera_data.launch  Kimera_data_for_rosbag.launch  Kimera_data_rosbag_experiment.launch  mapping.launch  tcp_unity_connector.launch  unity_communication  unity_communication.launch
scene_understanding_pkg/src/: Kimera_vio_data.cpp  Kimera_vio_data_for_rosbag.cpp  Mesh_constructor.cpp  SU_Unity_comm.cpp  display_received_meshes_in_rviz.cpp  perception_server.cpp  perception_server_node.cpp  triangle_mesh_rviz.cpp  triangle_mesh_rviz_from_txt_file.cpp
scene_understanding_pkg/src/Feature_detector/: Feature_detection.cpp  feature_detector.cpp  feature_detector.py  feature_detector_class.py  from __future__ import print_function.py  republish_left_stereo_voxl3.py  republish_right_stereo_voxl3.py  ros_data.py
scene_understanding_pkg/src/Mesh_Vertices_data/Exp_1/: holo_position_0.txt  holo_position_1.txt  holo_position_2.txt  holo_position_3.txt  holo_position_4.txt  holo_position_5.txt  holo_position_6.txt  holo_position_7.txt  holo_position_8.txt  holo_position_9.txt  mesh_vertices_pos_0.txt  mesh_vertices_pos_1.txt  mesh_vertices_pos_2.txt  mesh_vertices_pos_3.txt  mesh_vertices_pos_4.txt  mesh_vertices_pos_5.txt  mesh_vertices_pos_6.txt  mesh_vertices_pos_7.txt  mesh_vertices_pos_8.txt  mesh_vertices_pos_9.txt
scene_understanding_pkg/src/Mesh_Vertices_data/Exp_10/: holo_position_0.txt  holo_position_1.txt  indices_list_original.txt  indices_n_original.txt  meshes_indices_list_0.txt  meshes_indices_list_1.txt  meshes_indices_num_0.txt  meshes_indices_num_1.txt  meshes_vertices_num_0.txt  meshes_vertices_num_1.txt  meshes_vertices_pos_0.txt  meshes_vertices_pos_1.txt  new_vertices.txt  new_vertices_original.txt  row.txt  row_original.txt  vertices_n.txt
scene_understanding_pkg/src/Mesh_Vertices_data/Exp_11/: size_new_indices_original.txt  (+2 more)
scene_understanding_pkg/src/PCL_Examples/: pcl_examples1.cpp  plot_vtk_file.py
scene_understanding_pkg/src/utils/: perception_utils.cpp
scene_understanding_pkg_msgs/: CMakeLists.txt  package.xml
scene_understanding_pkg_msgs/msg/: BoundingBox3DArray.msg  MeshPos.msg  MeshPos3DMsg.msg  MeshRelatedData.msg  MeshVertexPosition.msg  ObstacleRepForce.msg  RRTObstaclesCoo.msg  RRTPathPoints2D.msg  waypointArray.msg  waypointMsg.msg
(+73 files in other folders)
